--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 .header {
-  background-image: url(/images/bg.png);
+  background-image: url(../images/bg.png);
   height: 115vh;
   background-repeat: no-repeat;
   background-size: cover;
@@ -271,7 +271,7 @@ body {
 }
 
 .black_block {
-  background-image: url(/images/black_bg.png);
+  background-image: url(../images/black_bg.png);
   padding: 80px 0;
 }
 
@@ -344,7 +344,7 @@ body {
 }
 
 .menu {
-  background-image: url(/images/menu_bg.png);
+  background-image: url(../images/menu_bg.png);
   background-repeat: no-repeat;
   background-size: cover;
   margin-top: 120px;
