--- a/style/style.css
+++ b/style/style.css
@@ -522,6 +522,12 @@ body {
   height: 732px;
   padding-bottom: 100px;
 }
+
+.footer_img {
+  display: block;
+  max-width: 1440px;
+}
+
 .footer {
   background-color: #000;
   padding: 50px 0px;
