--- a/style/style.css
+++ b/style/style.css
@@ -524,6 +524,11 @@ body {
   padding-bottom: 150px;
 }
 
+.footer_img {
+  display: block;
+  max-width: 1250px;
+}
+
 .footer {
   background-color: #000;
   padding: 50px 0px;
