--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 .header {
-  background-image: url(/restaurant/images/bg.png);
+  background-image: url(../restaurant/images/bg.png);
   height: 800px;
   background-repeat: no-repeat;
   background-size: cover;
